--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
 @import 'sections/team.scss';
 @import 'sections/event.scss';
 @import 'sections/news.scss';
+@import 'sections/foother.scss';
 @import 'includes/normalize.scss';
 
 body {
