--- a/src/styles/sections/about.scss
+++ b/src/styles/sections/about.scss
@@ -7,7 +7,7 @@
     padding-top: 200px;
 
     .what-doing-heading {
-        
+        margin-bottom: 100px;
         h1 {
         font-family: a_FuturaRoundDemi;
         font-style: normal;
@@ -18,9 +18,10 @@
         margin-top: -25px;
         position: absolute;
         z-index: 3;
-        margin-left: 30%;
+        margin-left: 25%;
         margin-top: -2%;  
-        color: #0A3737;}
+        color: #0A3737;
+    }
         
         
         
@@ -31,7 +32,7 @@
             font-size: 32px;
             text-align: center;
             color: #333333;
-            
+            margin-left: 15%;
         }
 
         .bg-text {
@@ -43,12 +44,12 @@
         }
         .interpretation {
             .bg-about {
-                    img {
-                    position: relative;
-                    margin-left: 20%;
-                    margin-top: 10%;
-                    z-index: 0;
-                    }
+                margin-top: 100px;
+                margin-left: 10%;
+                
+                svg {
+                    margin-left: 15%;
+                }
             }
 
             .slip_1 {
