--- a/src/styles/sections/event.scss
+++ b/src/styles/sections/event.scss
@@ -1,3 +1,6 @@
+
+
+
 .heading-event {
     h1 {
         font-family: a_FuturaRoundDemi;
@@ -19,4 +22,13 @@
         margin-left: 35%;
         }
     }
+}
+ /* Vector 9 */
+
+
+
+.event-background {
+    position: relative;
+    width: 100%;
+   
 }
