--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -8,18 +8,25 @@ header {
         margin-right: 100px;
     ul {
          li {
-            font-size: 30px;
-            display: inline;
-            list-style-type: none;
             font-family: a_FuturaRoundDemi;
             font-style: normal;
             font-weight: normal;
+            font-size: 20px;
             line-height: 25px;
+            letter-spacing: 0.1em;
+            color: #FFFFFF;
+            display: inline;
+            list-style-type: none;
             padding-left: 40px;
+            text-align: center;
+            margin-left: -45px;
+            padding-right: 60px;
+            font-size: 25px;
         a {
             text-decoration: none;
+            margin-top: 15px;
             letter-spacing: 0.1em;
-            color: rgb(201, 198, 198);}
+            color: rgb(252, 252, 252);}
             }
         }
    }
@@ -39,13 +46,16 @@ header {
    }
    
 }
-.bg {
-    position: relative;
-    img {
-    width: 600px;}
-}
+// .bg {
+//     position: relative;
+//     img {
+//     width: 600px;}
+// }
 .main-navigation {
-    position: absolute;
+    background-image: url(./../images/bg-up.png);
     left: 400px; 
+    padding-bottom: 85px;
+    padding-top: 30px;
+    background-repeat: no-repeat;
 }
 
