--- a/src/styles/sections/team.scss
+++ b/src/styles/sections/team.scss
@@ -1,5 +1,6 @@
 .team {
-    margin: 200px 100px 200px 100px;
+    margin-bottom: 100px;
+    margin-top: 100px;
     .heading-team {
         h1 {
             font-family: a_FuturaRoundDemi;
@@ -10,7 +11,7 @@
             letter-spacing: 0.05em;
             position: absolute;
             z-index: 3;
-            margin-left: 31%;
+            margin-left: 40%;
             margin-top: -1.5%;
             color: #0A3737;
         }
@@ -26,7 +27,10 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
-
+        align-items: center;
+        position: absolute;
+        z-index: 2;
+        margin-left: 15%;
 
         .curator {
             display: flex;
@@ -101,4 +105,10 @@
             }
         }
     }
+}
+
+.team-background {
+    position: relative;
+    width: 100%;
+
 }
