--- a/src/styles/sections/form.scss
+++ b/src/styles/sections/form.scss
@@ -25,6 +25,12 @@ $br: 4px;
   h2 {
       text-align: center;
       margin-top: -10px;
+      font-family: Ubuntu;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 24px;
+      line-height: 28px;
+      color: #333333;
   }
   img {
     width: 80px;
