--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,11 @@
 @import 'sections/news.scss';
 @import 'sections/foother.scss';
 @import 'includes/normalize.scss';
+// @import 'reset.scss';
+@import 'fonts';
+@import 'settings.scss';
+@import 'styles.scss';
+
 
 body {
         
