--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -53,9 +53,11 @@ header {
 // }
 .main-navigation {
     background-image: url(./../images/bg-up.png);
-    left: 400px; 
-    padding-bottom: 85px;
-    padding-top: 30px;
+    left: 350px; 
+    padding-bottom: 130px;
+    padding-left: 20px;
+    padding-right: 50px;
+    padding-top: 70px;
     background-repeat: no-repeat;
 }
 
