--- a/src/styles/sections/base.scss
+++ b/src/styles/sections/base.scss
@@ -10,9 +10,13 @@
         display: flex;
         flex-direction: column;
        .caption {
-        font-family: a_FuturaRoundDemi;
+        font-family: a_FuturaRound;
+        font-style: normal;
         font-weight: bold;
+        font-size: 48px;
+        line-height: 120%;
         letter-spacing: 0.05em;
+        color: #EC5F72;
         h1 {
             color: #EC5F72;
             font-size: 48px;}
@@ -77,6 +81,7 @@
     margin-left: 150px;
     margin-right: 150px;
     margin-top: 50px;
+    margin-bottom: 150px;
 
     .social-icons {
         display: flex;
@@ -109,9 +114,11 @@
     .pay {
         display: flex;
         flex-direction: column;
-        // background-image: url(./../images/bg-right.png);
-        // background-repeat: no-repeat;
-        // padding-right: 100px;
+        background-image: url(./../images/bg-right.png);
+        background-repeat: no-repeat;
+        background-position: right;
+        margin-right: -150px;
+        background-size: contain;
         
         
         h2 {
