--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -59,5 +59,10 @@ header {
     padding-right: 50px;
     padding-top: 70px;
     background-repeat: no-repeat;
+    background-size: contain;
 }
 
+
+// .wr-header {
+//     height: 100vh;
+// }
