--- a/src/styles/sections/team.scss
+++ b/src/styles/sections/team.scss
@@ -1,6 +1,11 @@
 .team {
     margin-bottom: 100px;
     margin-top: 100px;
+    background-image: url(./../images/bg-team.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    padding-bottom: 70px;
     .heading-team {
         h1 {
             font-family: a_FuturaRoundDemi;
@@ -28,9 +33,9 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
-        position: absolute;
-        z-index: 2;
-        margin-left: 15%;
+        // position: absolute;
+        // z-index: 2;
+        
 
         .curator {
             display: flex;
@@ -107,8 +112,8 @@
     }
 }
 
-.team-background {
-    position: relative;
-    width: 100%;
+// .team-background {
+//     position: relative;
+//     width: 100%;
 
-}
+// }
