--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@
 @import 'sections/event.scss';
 @import 'sections/news.scss';
 @import 'sections/foother.scss';
+@import 'sections/history.scss';
 @import 'includes/normalize.scss';
 // @import 'reset.scss';
 @import 'fonts';
