--- a/src/styles/sections/foother.scss
+++ b/src/styles/sections/foother.scss
@@ -28,7 +28,7 @@
             margin-top: -2%;
             position: absolute;
             z-index: 3;
-            margin-left: 39%;
+            margin-left: 40%;
             // background-image: url(./../images/bg-heading.png);
         }
         .bg-heading {
@@ -75,6 +75,7 @@
         line-height: 23px;
         margin-left: 100px;
         margin-right: 100px;
+        padding-bottom: 100px;
 
         color: #FFFFFF;
 
