--- a/src/styles/sections/news.scss
+++ b/src/styles/sections/news.scss
@@ -57,7 +57,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    .instagram {
+    .instagram-1, .instagram-2, .instagram-3 {
 
         flex-direction: column;
         justify-content: center;
@@ -145,4 +145,49 @@
     position: relative;
     top: 0;
     left: 0;
+}
+
+@media (max-width: 1024px )  {
+    .news {
+        margin-top: 150px;
+        margin-bottom: 150px;
+        background-image: url(./../images/news-bg-1.png),
+                        none,
+                        url(./../images/news-bg-3.png);
+    
+      
+        
+    }
+    
+    .all-news {
+        display: flex;
+        justify-content: flex-end;
+         margin-right: 15%;
+         font-family: Ubuntu;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 24px;
+        margin-top: 100px;
+    
+        a {
+            text-decoration: underline;
+            text-decoration-style: dotted;
+            color:#0B6B6B;
+        }
+    
+    }
+    .networks {
+        margin-top: 150px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+
+        .instagram-3 {
+            display: none;
+        }
+
+
+    
+    
+    }    
 }
